--- a/modlist.html
+++ b/modlist.html
@@ -1,13 +1,14 @@
 ﻿<ul>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/yabba">YABBA (by LatvianModder)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/apotheosis">Apotheosis (by Shadows_of_Fire)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fermiumbooter">FermiumBooter (by fonnymunkey)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/llibrary">LLibrary (by MCModDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/dynaores">Dynamic Raw Ores (by smileycorp)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/reach-fix">Reach Fix (by meldexun)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jeri">Just Enough Recipe Integrations (by smileycorp)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fusion">Fusion (by skrallexy)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/superjedi224s-nether-dungeons">SuperJedi224's Nether Dungeons (by SuperJedi224)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bookshelf">Bookshelf (by DarkhaxDev)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/fluidlogged-api">Fluidlogged API (by jbredwards)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/vintagefix">VintageFix (by embeddedt)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/spartan-weaponry">Spartan Weaponry (by ObliviousSpartan)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/biometweakercore">BiomeTweakerCore (by superckl)</a></li>
@@ -16,27 +17,28 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/geckolib">GeckoLib (by Gecko)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/biometweaker">BiomeTweaker (by superckl)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/raids-backport">Raids Backport (by smileycorp)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/the-aurorian">The Aurorian (by shiroroku)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/better-invisibility">Better Invisibility (by Purplicious_Cow_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/end-expansion-the-lamented-islands">End Expansion - The Lamented Islands (by jboymercs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jei">Just Enough Items (JEI) (by mezz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/nothirium">Nothirium (by meldexun)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/aquaculture">Aquaculture 2 (by Shadow)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/aqua-acrobatics">Aqua Acrobatics [Forge] (by embeddedt)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/yungs-better-mineshafts-forge">YUNG's Better Mineshafts (Forge) (by YUNGNICKYOUNG)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/lootr">Lootr (Forge & NeoForge) (by Noobanidus)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/enchantment-descriptions">Enchantment Descriptions (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/kleeslabs">KleeSlabs (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/entity-culling">Entity Culling (by meldexun)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/cqrepoured">Chocolate Quest Repoured (by Lordepos)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/yungs-better-caves">YUNG's Better Caves (Forge) (by YUNGNICKYOUNG)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mmmmmmmmmmmm">MmmMmmMmmMmm (Target Dummy) (by MehVahdJukaar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/forge-backpacks">Backpacks (by Eydamos)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/game-stages">Game Stages (by DarkhaxDev)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/better-burning">Better Burning (by DarkhaxDev)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/project-74246">Doomlike Dungeons (by JaredBGreat)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mowzies-mobs">Mowzie's Mobs (by bobmowzie)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/patchouli">Patchouli (by Vazkii)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/netherex">NetherEx (by LogicTechCorp)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/hit-indication">Hit Indication (by hamesterfoxxo)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rebirth-of-the-mobs">Rebirth of the Mobs (by Quarris)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/controlling">Controlling (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/electroblobs-wizardry">Electroblob's Wizardry (by Electroblob)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/aether">The Aether (by TheAetherTeam)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/debark">Debark (by asiekierka)</a></li>
@@ -55,6 +57,8 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/iron-chests">Iron Chests (by ProgWML6)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rustic">Rustic (by cadaverous_queen)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/item-highlighter">Item Highlighter [Neo/Forge] (by Grend_G)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/libraryex">LibraryEx (by LogicTechCorp)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/zoology-of-the-world-of-withernauts">Zoology of the World of Withernauts (by turtdance)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/recurrent-complex">Recurrent Complex (by Ivorius)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ctm">ConnectedTexturesMod (by tterrag1098)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/future-mc">Future MC (by thedarkcolour)</a></li>
@@ -68,23 +72,26 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/spartan-shields">Spartan Shields (by ObliviousSpartan)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/arcane-archives">Arcane Archives (by AranaiRa)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rlmixins">RLMixins (by fonnymunkey)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/village-names">Village Names (by AstroTibs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jei-villagers">JEI Villagers (by Buuz135)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/bow-infinity-fix">Bow Infinity Fix (Forge/Fabric) (by Parker8283)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-combat">Immersive Combat (1.12 Better Combat) (by burgggy)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/inventory-tweaks">Inventory Tweaks [1.12 only]  (by JimeoWan)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/quark-rotn-edition">Quark: RotN Edition (by asterixxxxxxxxxxxxxx)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/frozen-fiend">Frozen Fiend (by UnOriginal_1)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/oceanic-expanse">Oceanic Expanse (by Sir_Squid1y)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/placebo">Placebo (by Shadows_of_Fire)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/better-combat-rebirth">Better Combat Rebirth (by SanAndreaP)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/configanytime">ConfigAnytime (by CleanroomMC)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/beast-slayer">Beast Slayer (by UnOriginal_1)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/simpleores">SimpleOres (by skrallexy)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fermiumasm">FermiumASM (by fonnymunkey)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/fastworkbench">FastWorkbench (by Shadows_of_Fire)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/the-twilight-forest-deforestation-edition">The Twilight Forest - Deforestation Edition (by MetallicaFan011)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/illagers">Illagers+ (by LiteWolf101)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/spiders-2-0">Spiders 2.0 (by TheCyberBrick)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/deep-below">Deep Below (by UnOriginal_1)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/crafttweaker">CraftTweaker (by Jaredlll08)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/universal-tweaks">Universal Tweaks (by ACGaming)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/the-weirding-gadget">The Weirding Gadget (by AtomicBlom)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/atlas-lib">Atlas Lib (by smileycorp)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/depths-of-madness">Depths of Madness (by jboymercs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fishs-undead-rising">Fish's Undead Rising (by fish0016054)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/toroquest-revamped">ToroQuest Revamped (by burgggy)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/overloaded-armor-bar">Overloaded Armor Bar (by tfarecnim)</a></li>
